--- a/unm-mobileweb-app/src/main/webapp/css/styles.css
+++ b/unm-mobileweb-app/src/main/webapp/css/styles.css
@@ -1,12 +1,11 @@
+/* ======== GENERAL ======== */
+
 body {
 	background-color: #79b8d9;
 	font-family: 'Helvetica Neue', Arial, sans-serif;
 	font-size: 105%;
 	padding: 0;
 	margin: 0;
-}
-body#body-about {
-	background-color: #9bc9e1;
 }
 div.body {
 	margin: auto;
@@ -61,6 +60,12 @@ a:active,
 #body-about #div-ok a:active {
 	color: #0f0;
 }
+
+/* ======== ABOUT ======== */
+
+body#body-about {
+	background-color: #9bc9e1;
+}
 #body-about #div-info {
 	background-color: #fff;
 	opacity: 0.8;
@@ -81,4 +86,90 @@ a:active,
 #body-about #div-ok {
 	text-align: center;
 	margin-top: 10px;	
+}
+
+/* ======== REGIONS ======== */
+
+#body-regions td,
+#body-regions #div-table div {
+	white-space: nowrap;
+	overflow: hidden;
+	width: 100%;
+	xdisplay: block;
+}
+#body-regions div.h1 {
+	color: #000;
+	font-size: 120%;
+	xfont-style: italic;
+	width: 100%;
+	padding-left: 0;
+	padding-right: 0;
+	background-color: #9bc9e1;
+	display: table;
+}
+#body-regions h1 {
+	color: #fff;
+	font-size: 120%;
+	display: table-cell;
+	vertical-align: baseline;
+	margin: 2px;
+	xpadding: 0;
+	font-weight: bold;
+}
+#body-regions div.h1 div {
+	font-style: normal;
+	display: table-cell;
+	font-size: small;
+	font-weight: bold;
+	xmargin: 1.5em 1em 0 0;
+	text-align: right;
+	padding-right: 1em;
+	vertical-align: baseline;
+}
+#body-regions div.h1 div.up {
+	font-size: 120%;
+	padding: 0;
+}
+#body-regions div.h1 div.up a {
+	color: #00f;
+	display: inline;
+	padding: 0 0 0 8px;
+	background-color: transparent;
+}
+#body-regions div.h1 div a {
+	color: #fff;
+	display: inline-block;
+	padding: 4px 8px;
+	background-color: #79b8d9;
+}
+#body-regions table,
+#body-regions #div-table div {
+	border-collapse: collapse;
+	width: 100%;
+	margin: 0;
+	xdisplay: block;
+	xborder: 1px solid #f00;
+}
+#body-regions td,
+#body-regions #div-table div {
+	width: 100%;
+	border-top: 1px solid #fff;
+}
+#body-regions td,
+#body-regions #div-table {
+	border-bottom: 1px solid #fff;	
+}
+#body-regions td a,
+#body-regions #div-table div a {
+	display: block;
+	padding: 8px 4px;
+}
+#body-regions td a:hover,
+#body-regions #div-table div a:hover {
+	background-color: #9bc9e1;
+}
+#body-regions td a:active,
+#body-regions #div-table div a:active {
+	background-color: #ccc;
+	color: #f00;
 }
