--- a/unm-mobileweb-app/src/main/webapp/css/mobile.css
+++ b/unm-mobileweb-app/src/main/webapp/css/mobile.css
@@ -414,7 +414,8 @@ div.bottomNav {
 	clear: both;
 }
 #div-map {
-	width: 100%;	
+	width: 100%;
+	height: 200px;	
 }
 div.infoWindow {
 	width: 15em;
