--- a/unm-mobileweb-app/src/main/webapp/css/mobile.css
+++ b/unm-mobileweb-app/src/main/webapp/css/mobile.css
@@ -252,6 +252,7 @@ div.h1.nav div a {
 #body-pois.map div.h1.nav div.up,
 #body-pois.map table.pois,
 #body-pois.map #div-details,
+#body-pois.map #div-comments,
 #body-pois.map div.details.bottomNav {
 	display: none;
 }
@@ -259,13 +260,22 @@ div.h1.nav div a {
 #body-pois.list #div-map,
 #body-pois.list #div-poiNav, 
 #body-pois.list #div-details,
+#body-pois.list #div-comments,
 #body-pois.list div.details.bottomNav {
 	display: none;
 }
 #body-pois.details table.pois,
 #body-pois.details #div-map,
 #body-pois.details #div-poiNav,
+#body-pois.details #div-comments,
 #body-pois.details div.list.bottomNav {
+	display: none;
+}
+#body-pois.comments table.pois,
+#body-pois.comments #div-map,
+#body-pois.comments #div-poiNav,
+#body-pois.comments #div-details,
+#body-pois.comments div.list.bottomNav {
 	display: none;
 }
 div.bottom {
@@ -458,7 +468,8 @@ div.infoWindow span.name {
 	padding-bottom: 0.8em;
 	border-bottom: 1px solid #666;
 }
-#div-details div.name {
+#div-details div.name,
+#div-comments div.name {
 	font-size: 120%;
 	font-weight: bold;
 	margin: 0.8em 0 0.8em;
@@ -500,4 +511,74 @@ div.infoWindow span.name {
 #div-detailsMap {
 	width: 100%; 
 	height: 260px;	
+}
+
+/* ======== COMMENTS ======== */
+
+#body-pois #div-comments ul {
+	list-style-type: none;
+	padding: 0;
+	xmargin: 0 4px;
+	margin: 0;
+	background-color: #fff;
+}
+#body-pois #div-comments li {
+	position: relative;
+	padding: 8px 8px 0;
+	margin: 0 -4px;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	xbackground-color: #ff0;
+}
+#body-pois #div-comments div.displayName {
+	position: absolute;
+	top: 7px;
+	left: 48px;
+}
+#body-pois #div-comments div.username {
+	position: absolute;
+	top: 18px;
+	left: 48px;
+}
+div.displayName {
+	font-size: 12px;
+	font-weight: bold;
+}
+div.username {
+	font-size: 12px;
+	color: #aaa;
+}
+#body-pois #div-comments div.text,
+#body-pois #div-addCommentDialog textarea {
+	font-family: 'Times New Roman', serif;
+	font-size: 16px;
+}
+#body-pois #div-comments div.timestamp {
+	font-size: 12px;
+	padding: 8px 0 12px;
+}
+#body-pois #div-comments div.timestamp a {
+	color: #aaa;
+	text-decoration: none;
+}
+#body-pois #div-comments div.error {
+	background-color: #eee;
+	color: #900;
+	xpadding: 1em;
+	text-align: left;
+	xmargin-bottom: 1px;
+	font-size: 12px;
+	font-weight: bold;
+}
+#body-pois #div-comments div.errorThrown {
+	font-weight: normal;
+	margin-top: 8px;
+}
+#body-pois #div-comments-timeline {
+	margin-top: 8px;
+}
+img.profileImage {
+	display: block;
+	width: 32px;
+	height: 32px;
 }
